# surgical_robot

./: README.md  Tasks.md
docs/: hardware_selection.excalidraw  motor_selection.md  software_plan.excalidraw
psm_tool/: CMakeLists.txt  package.xml
psm_tool/config/: model_bringup.rviz
psm_tool/launch/: psm_tool_bringup.launch.py
psm_tool/meshes/: jaw.stl  roll.stl  wrist.stl
psm_tool/urdf/: simple_forcep.urdf.xacro
